# NLP_Package

./: .gitignore  main.py  malware_analysis\.txt  pyproject.toml
app/: app.db  main.py  seed.py
app/api/: deps.py
app/api/routes/: auth.py  email.py
app/core/: security.py
app/db/: base_class.py  database.py  init_db.py
app/models/: email.py  user.py
app/schemas/: email.py  user.py
app/services/: email_service.py  spam.py
app/templates/: 403.html  404.html  500.html  base.html  email_list.html  email_view.html  error.html  form_error.html  inbox.html  login.html  register.html  send.html  spam.html
model/: NLP_Package.ipynb
